School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_object/wrongNewClass.deca
// Description:
//    Programme qui crée un type d'une classe qui existe pas
//
// Resultats:
//    1
//
// Historique:
//    cree le 22/12/2023

class A {
	int x;
}

{
    B a = new B();
}
